# chorusagents

./: .gitignore  LICENSE  README.md  pyproject.toml
agentfabric/: __init__.py  cli.py  fabric.py
agentfabric/core/: __init__.py  agent.py  architect.py  factory.py  network.py  topology.py
agentfabric/providers/: __init__.py  anthropic.py  azure_openai.py  bedrock.py  gemini.py  huggingface.py  langchain_provider.py  ollama.py  openai.py
agentfabric/utils/: __init__.py  logger.py
agentfabric/visualization/: __init__.py  graphviz.py  mermaid.py
chorusagents/: __init__.py  chorus.py  cli.py
chorusagents/core/: __init__.py  agent.py  architect.py  factory.py  network.py
chorusagents/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  bedrock.py  gemini.py  huggingface.py  langchain_provider.py  ollama.py  openai.py
chorusagents/utils/: __init__.py  logger.py
chorusagents/visualization/: __init__.py  graphviz.py  mermaid.py
examples/: all_providers.py  custom_provider.py  hospital.py  law_firm.py  school.py
tests/: conftest.py  test_agent.py  test_all_providers.py  test_architect.py  test_fabric.py  test_factory.py  test_network.py  test_providers.py  test_topology.py  test_visualization.py
