[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chorusagents"
version = "0.1.0"
description = "Autonomously synthesize a complete multi-agent network from a single role description"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ChorusAgents Contributors" }]
keywords = ["ai", "agents", "multi-agent", "llm", "orchestration", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    # Core framework deps — always installed
    "nest_asyncio>=1.5",
    "networkx>=3.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.24.0",
    # Default providers (Anthropic + OpenAI) included out of the box
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
# ── Per-provider extras ───────────────────────────────────────────────────────
azure = [
    "openai>=1.0.0",           # AzureOpenAI uses the openai SDK
]
gemini = [
    "google-generativeai>=0.8.0",
]
bedrock = [
    "boto3>=1.34.0",
]
ollama = [
    "ollama>=0.3.0",
]
huggingface = [
    "huggingface-hub>=0.24.0",
]
langchain = [
    "langchain-core>=0.2.0",
]

# ── Visualization ─────────────────────────────────────────────────────────────
visualization = [
    "graphviz>=0.20",
]

# ── Development ───────────────────────────────────────────────────────────────
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

# ── Everything (for power users / CI) ────────────────────────────────────────
all = [
    # All providers
    "google-generativeai>=0.8.0",
    "boto3>=1.34.0",
    "ollama>=0.3.0",
    "huggingface-hub>=0.24.0",
    "langchain-core>=0.2.0",
    # Visualization
    "graphviz>=0.20",
    # Dev tools
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/hamzakpt/chorusagents"
Documentation = "https://github.com/hamzakpt/chorusagents#readme"
Repository = "https://github.com/hamzakpt/chorusagents"
Issues = "https://github.com/hamzakpt/chorusagents/issues"

[project.scripts]
chorusagents = "chorusagents.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chorusagents"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
